# hashseq-blockchain-paper

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
hashseq/: __init__.py  core.py  example.py
paper-en/: blockchain-hash-sequence-generation-system-and-method-v2.md
paper-md/: 基于区块链hash值生成数列的系统与方法V2.md
paper-md/media/: image1.emf  image14.emf  image15.emf  image16.emf  image17.emf  image18.emf  image19.emf
paper/基于区块链hash值生成数列的系统与方法2/: 摘要附图.doc  权利要求书.doc  说明书.doc  说明书摘要.doc  说明书附图.doc
tests/: test_core.py  test_example.py
