[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hashseq-blockchain"
version = "0.1.0"
description = "Deterministic sequence generation from blockchain hash values"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["hashseq"]

